# citra

./: .gitmodules  CMakeLists.txt  vcpkg.json
CMakeModules/: VcpkgCmakeUtils.cmake
src/audio_core/: CMakeLists.txt
src/citra/: CMakeLists.txt  citra.cpp  config.cpp
src/citra/emu_window/: emu_window_sdl2.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  cheats.cpp  game_list.cpp  loading_screen.cpp  loading_screen.h  main.cpp
src/citra_qt/configuration/: config.cpp  configure_camera.cpp  configure_enhancements.cpp
src/citra_qt/debugger/ipc/: recorder.cpp  recorder.h
src/common/: CMakeLists.txt  alignment.h  atomic_ops.h  bit_field.h  bit_field_array.h  blocking_loop.h  common_funcs.h  common_types.h  hash.h  intrusive_ptr.h  linear_disk_cache.h  math_util.h  object_pool.cpp  object_pool.h  texture.cpp  thread.h  vector_math.h
src/common/logging/: backend.cpp  log.h
src/common/serialization/: optional.h
src/common/x64/: xbyak_abi.h
src/core/: CMakeLists.txt  core.cpp  core.h  memory.cpp  movie.cpp  settings.cpp  settings.h
src/core/arm/dynarmic/: arm_dynarmic.cpp  arm_dynarmic.h  arm_exclusive_monitor.cpp  arm_exclusive_monitor.h
src/core/frontend/: emu_window.h
src/core/hle/service/: http_c.h
src/core/hle/service/apt/: applet_manager.h
src/core/hle/service/nwm/: nwm_uds.cpp  nwm_uds.h
src/core/hw/: gpu.cpp
src/dedicated_room/: CMakeLists.txt
src/input_common/: CMakeLists.txt  touch_from_button.cpp
src/network/: CMakeLists.txt
src/tests/: CMakeLists.txt  tests.cpp
src/tests/core/hle/kernel/: hle_ipc.cpp
src/tests/core/memory/: vm_manager.cpp
src/tests/video_core/shader/: shader_jit_x64_compiler.cpp
src/video_core/: CMakeLists.txt  command_processor.cpp  gpu.cpp  gpu.h  pica.cpp  pica.h  pica_regs.inc  pica_types.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer_interface.h  regs.h  regs_framebuffer.h  regs_pipeline.h  regs_rasterizer.h  regs_texturing.h  renderer_base.cpp  video_core.cpp  video_core.h
src/video_core/common/: backend.h  buffer.h  framebuffer.h  pica_types.h  pica_uniforms.cpp  pica_uniforms.h  pipeline.h  pipeline_cache.cpp  pipeline_cache.h  pool_manager.h  rasterizer.cpp  rasterizer.h  rasterizer_cache.cpp  rasterizer_cache.h  renderer.cpp  renderer.h  shader.h  shader_disk_cache.cpp  shader_disk_cache.h  shader_gen.cpp  shader_gen.h  shader_runtime_cache.h  surface_params.cpp  surface_params.h  texture.h
src/video_core/debug_utils/: debug_utils.cpp
src/video_core/renderer_opengl/: gl_format_reinterpreter.cpp  gl_format_reinterpreter.h  gl_rasterizer.cpp  gl_rasterizer_cache.cpp  gl_shader_decompiler.cpp  gl_shader_decompiler.h  gl_shader_manager.cpp  gl_shader_manager.h  renderer_opengl.cpp
src/video_core/renderer_vulkan/: pica_to_vulkan.h  renderer_vulkan.cpp  renderer_vulkan.h  vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_buffer.h  vk_command_manager.cpp  vk_command_manager.h  vk_common.h  vk_context.cpp  vk_context.h  vk_format_reinterpreter.cpp  vk_format_reinterpreter.h  vk_format_util.cpp  vk_format_util.h  vk_framebuffer.cpp  vk_framebuffer.h  vk_instance.cpp  vk_instance.h  vk_memory.cpp  vk_memory.h  vk_pipeline.cpp  vk_pipeline.h  vk_pipeline_builder.cpp  vk_pipeline_builder.h  vk_pipeline_manager.cpp  vk_pipeline_manager.h  vk_platform.h  vk_rasterizer.cpp  vk_rasterizer.h  vk_rasterizer_cache.cpp  vk_rasterizer_cache.h  vk_renderpass_cache.cpp  vk_renderpass_cache.h  vk_resource_cache.cpp  vk_resource_cache.h  vk_resource_manager.h  vk_shader.cpp  vk_shader.h  (+13 more)
src/video_core/shader/: shader.h
src/video_core/swrasterizer/: clipper.h  framebuffer.cpp  framebuffer.h  rasterizer.cpp  texturing.cpp  texturing.h
src/web_service/: CMakeLists.txt  announce_room_json.cpp  telemetry_json.cpp
